# oh-my-worktree

./: .gitignore  .release-it.json  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.ko.md  README.md  package.json  plan.md
.agents/prompts/: install-owt.md
.agents/skills/owt-install/: SKILL.md
.agents/skills/owt-worktree/: SKILL.md
.github/workflows/: docs.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/plans/: non-blocking-ops.md
assets/owt-favicon-package/: favicon-html-snippet.txt  site.webmanifest
docs/: CNAME  Gemfile  _config.yml  index.html  index.md
docs/concepts/: bare-repository.md  index.md  why-worktrees.md  worktree-pattern.md
docs/getting-started/: index.md  installation.md  quick-start.md  shell-integration.md
docs/reference/: configuration.md  index.md  keybindings.md
docs/solutions/: README.md
docs/solutions/best-practices/: ai-agent-project-map.md
docs/ssot/: 00-ssot-index.md  01-repository-worktree-policy.md  02-configuration-trust-boundary-policy.md  03-cli-tui-use-case-contract.md  04-git-operation-safety-policy.md  05-shell-integration-exit-contract.md  06-documentation-release-asset-policy.md
docs/usage/: git-operations.md  index.md  navigation.md  workflows.md  worktrees.md
npm/: .npmignore  README.md  install.js  package.json
src/: app.rs  config.rs  git.rs  main.rs  tmux.rs  types.rs  worktree_prune.rs
src/ui/: add_modal.rs  config_modal.rs  confirm_modal.rs  help_modal.rs  main_view.rs  merge_modal.rs  mod.rs  theme.rs
src/worktree_prune/: tests.rs
tests/: git_test.rs
(+2 files in other folders)
