[package]
name = "oh-my-worktree"
version = "0.2.1"
edition = "2021"
description = "Bare repository based Git worktree management TUI tool"

[[bin]]
name = "owt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
